added media queries

--- a/programs.css
+++ b/programs.css
@@ -1,25 +1,12 @@
-#diamond {
-    background-color: #2ba6cb;
-    width:500px;
-    height: 500px;
-    position:absolute;
-    z-index:auto;
+.thumbnail {
+    margin-top: 5%;
 }
-#spade {
-    background-color: #9e0c0f;
-    width:500px;
-    height: 500px;
-    position:absolute;
-    z-index:1;
-    left:125px;
-    top:125px;
+
+@media only screen and (max-width: 1024px) {
 }
-#club {
-    background-color: yellowgreen;
-    width:500px;
-    height: 500px;
-    position:absolute;
-    z-index:2;
-    left:250px;
-    top:250px;
+
+
+
+@media only screen and (max-width: 2560px) {
+
 }
