--- a/programs.css
+++ b/programs.css
@@ -1,15 +1,55 @@
-.column.row.row, .row.row.columns{
-    height: 100vh;
+.small-6 {
+    margin-top: 10%;
 }
-.thumbnail {
-    margin-top: 5%;
+
+p{
+    text-align: center;
+}
+
+
+
+.right{
+    background: #0a0a0a;
+}
+.left{
+    background:#9e0c0f;
+
 }
 
 @media only screen and (max-width: 1024px) {
+    .small-6 {
+        width: 50%;
+    }
+
+    .thumbnail {
+        margin-top: 5%;
+        border: solid 4px #fefefe;
+        box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
+        max-width: 270px;
+        border-radius: 3px;
+        margin-bottom: 1rem;
+
+    }
 }
 
 
 
-@media only screen and (max-width: 2560px) {
 
+
+@media only screen and (max-width: 600px) {
+    .small-6 {
+        width: 100%;
+    }
+
+    .thumbnail {
+        margin-top: 5%;
+        max-width: 270px;
+
+        border: solid 4px #fefefe;
+        box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
+        max-width: 308px;
+        border-radius: 3px;
+        margin-bottom: 1rem;
+
+}
 }
