--- a/programs.css
+++ b/programs.css
@@ -16,6 +16,12 @@ p{
 
 }
 
+.thumbnail {
+    margin-top: 5%;
+    margin-left: 15%;
+}
+
+
 @media only screen and (max-width: 1024px) {
     .small-6 {
         width: 50%;
@@ -54,6 +60,7 @@ p{
         box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
         border-radius: 3px;
         margin-bottom: 1rem;
+        margin-left: 0%;
 
 }
 }
