--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,24 @@
+body {
+    font-family: "raleway", serif;
+}
+
 .hero .parallax-window {
     min-height: 600px;
     background: transparent;
+}
+
+.hero p {
+    text-align: center;
+    width: 320px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    font-size: 2em;
+    padding: 5px;
+    font-weight: bold;
+    background-color: red;
+    margin-top: 200px;
 }
 
 .about {
@@ -58,9 +76,18 @@ footer .contact {
 .dark-pink {
     background-color: hotpink;
     height: 35vw;
+    color: white;
+}
+
+footer h5 {
+    padding-top: 50px;
+    font-size: 1.8em;
+    font-family: "raleway", serif;
+    font-weight: 600;
 }
 
 footer p {
     text-align: center;
     padding-top: 20px;
+    font-size: 1.5em
 }
