--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,8 @@ body {
     font-family: "raleway", serif;
 }
 
+.hero {}
+
 .hero .parallax-window {
     min-height: 600px;
     background: transparent;
@@ -9,7 +11,6 @@ body {
 
 .hero p {
     text-align: center;
-    width: 320px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -17,8 +18,8 @@ body {
     font-size: 2em;
     padding: 5px;
     font-weight: bold;
-    background-color: red;
-    margin-top: 200px;
+    vertical-align: middle;
+    line-height: 600px;
 }
 
 .about {
