--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,38 @@ body {
     font-family: "raleway", serif;
 }
 
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #FFFFFF;
+    position: fixed;
+    width: 100%;
+    height: 65px;
+    box-shadow: 0px 2px 7px #655a5a
+}
+
+nav li {
+    float: left;
+}
+
+nav li a {
+    display: block;
+    color: black;
+    font-weight: 600;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li .active {
+    padding-right: 50px
+}
+
+
+/*********************************************************/
+
 .hero {}
 
 .hero .parallax-window {
