--- a/css/app.css
+++ b/css/app.css
@@ -72,7 +72,9 @@
     }
 }
 
-************************************************************************************ .menu {
+
+/************************************************************************************ /
+.menu {
     margin: 0;
     list-style-type: none;
     display: inline-block;
