changed the colors of the divs

--- a/programs.css
+++ b/programs.css
@@ -13,7 +13,7 @@ p{
     width: 55%;
 }
 .left{
-    background: #9e0c0f;
+    background: #FC017D;
     width: 55%;
     margin-top: -30%;
     height: 60vh;
@@ -21,7 +21,7 @@ p{
 }
 
 .second{
-    background: #299ec1;
+    background: #FC017D;
     width: 55%;
 }
 
@@ -38,7 +38,7 @@ p{
     width: 55%;
 }
 .fifth{
-    background: #9e0c0f;
+    background: #FC017D;
     width: 55%;
     margin-top: -30%;
     height: 60vh;
