--- a/programs.css
+++ b/programs.css
@@ -20,6 +20,7 @@ p{
 }
 
 .second{
+    opacity: 0.4;
     background: #FC017D;
     width: 55%;
 }
@@ -35,8 +36,9 @@ p{
     width: 55%;
 }
 .fifth{
+    opacity: 0.7;
     background: #FC017D;
-    width: 55%;
+    width: 53%;
     margin-top: -30%;
     height: 60vh;
 
