--- a/programs.css
+++ b/programs.css
@@ -15,7 +15,7 @@ p{
     background: #FC017D;
     width: 55%;
     margin-top: -30%;
-    height: 60vh;
+    /*height: 60vh;*/
 
 }
 
@@ -40,7 +40,7 @@ p{
     background: #FC017D;
     width: 53%;
     margin-top: -30%;
-    height: 60vh;
+    /*height: 60vh;*/
 
 }
 
