--- a/programs.css
+++ b/programs.css
@@ -1,3 +1,6 @@
+body{
+    background: #bababa;
+}
 .small-6 {
     margin-top: 10%;
 }
@@ -49,6 +52,11 @@ p{
     margin-left: 15%;
 }
 
+
+
+footer{
+    background: #757575;
+}
 
 @media only screen and (max-width: 1024px) {
     .small-6 {
