--- a/css/nav_mobile.css
+++ b/css/nav_mobile.css
@@ -57,6 +57,7 @@
 @media only screen and (max-width: 639px) {
     .mobile_nav {
         display: block;
+        margin-left: 5%;
     }
     .desk_nav {
         display: none;
