--- a/css/app.css
+++ b/css/app.css
@@ -17,6 +17,7 @@ nav ul {
     width: 100%;
     height: 65px;
     box-shadow: 0 2px 7px #655a5a;
+    z-index: 1000;
 }
 nav li {
     float: left;
@@ -120,8 +121,98 @@ nav li .active:hover {
 .impact p span {
     font-size: .7em
 }
+
+/**************************************************/
+
 .events-prog {
     height: 30vw;
+    color: black;
+    text-align: center;
+    padding-top: 30px
+}
+.events-prog .cards {
+    padding-bottom: 30px;
+}
+.card {
+    overflow: hidden;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    color: #272727;
+    border-radius: 2px;
+    background-color: ghostwhite;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.card .title {
+    line-height: 1rem;
+    font-size: 1rem;
+    font-weight: 300;
+}
+.card .content {
+    padding: 1.3rem;
+    font-weight: 300;
+    border-radius: 0 0 2px 2px;
+    border-bottom: 1px solid rgba(160, 160, 160, 0.2);
+    display: inline-block;
+}
+.card p {
+    margin: 0;
+}
+.card .action {
+    padding: 10px;
+    text-align: right;
+    display: inline-block;
+    float: right;
+}
+.card a {
+    color: #ffab40;
+    margin-right: 1.3rem;
+    transition: color 0.3s ease;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+.card .image {
+    position: relative;
+    height: 150px;
+    background-size: 100% 170%;
+    background-repeat: no-repeat;
+}
+.card .image .title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 1.3rem;
+    color: #fff;
+    font-size: 1.5em;
+}
+.card .image img {
+    border-radius: 2px 2px 0 0;
+    width: 100%;
+    height: 300px;
+}
+.qq {
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.event_date {
+    display: inline-block;
+}
+.event_txt {
+    border-right: 1px solid black;
+    width: 100%
+}
+h1 {
+    text-align: center;
+}
+.img_1 {
+    background-image: url(../img/pad.jpeg);
+}
+
+/**************************************************/
+
+footer {
+    margin-top: 100px;
 }
 footer .contact {
     min-width: 100%;
@@ -149,7 +240,7 @@ footer .contact {
     color: #fff;
     height: 400;
 }
-.dark-pink button{
+.dark-pink button {
     border: solid white 1px;
     padding: 7px;
     padding-left: 10px;
@@ -157,19 +248,19 @@ footer .contact {
     -webkit-transition: background-color .5s ease-in-out;
     color: white;
 }
-.dark-pink button a{
+.dark-pink button a {
     text-decoration: none;
     color: white;
 }
-.dark-pink button a:hover{
+.dark-pink button a:hover {
     color: black;
 }
-.dark-pink button:hover{
+.dark-pink button:hover {
     background-color: white;
     color: black;
 }
 .dark-pink i {
-    margin-left: 45px;
+    margin-left: 15px;
 }
 @media screen and (max-width: 500px) {
     .dark-pink {
