--- a/css/app.css
+++ b/css/app.css
@@ -76,7 +76,6 @@ nav li .active:hover {
     }
 }
 .about {
-    height: 70vh;
     background-color: #FFF;
 }
 .about p {
@@ -87,6 +86,7 @@ nav li .active:hover {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 100px;
 }
 @media screen and (max-width: 615px) {
     .about p {
