--- a/css/nav_mobile.css
+++ b/css/nav_mobile.css
@@ -5,8 +5,11 @@
     z-index: 1;
     top: 0;
     left: 0;
+/*
     background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.9);
+*/
+    background-color: #E4007D;
     overflow-y: hidden;
     transition: 0.5s;
 }
@@ -21,7 +24,7 @@
     padding: 8px;
     text-decoration: none;
     font-size: 36px;
-    color: #818181;
+    color: white;
     display: block;
     transition: 0.3s;
 }
