--- a/programs.css
+++ b/programs.css
@@ -1,7 +1,62 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
 
+
+/*NAVIGATION*/
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #FFFFFF;
+    position: fixed;
+    width: 100%;
+    height: 65px;
+    box-shadow: 0px 2px 7px #655a5a
+}
+
+nav li {
+    float: left;
+}
+
+nav li img {
+    height: 60px;
+    padding-left: 100px;
+}
+
+nav li a {
+    display: block;
+    color: black;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+}
+
+nav li .active {
+    padding-right: 100px
+}
+
+
+
 footer{
     background: #757575;
+}
+
+
+footer .contact {
+    min-width: 100%
+}
+
+footer h5 {
+    padding-top: 50px;
+    font-size: 1.8em;
+    font-family: "raleway", serif;
+    font-weight: 600;
+}
+
+footer p {
+    text-align: center;
+    padding-top: 20px;
+    font-size: 1.5em
 }
 
 @media only screen and (max-width: 1024px) {
