--- a/programs.css
+++ b/programs.css
@@ -62,6 +62,7 @@ footer{
     background: #757575;
     height: 11%;
     margin-top: 2%;
+
 }
 
 
@@ -82,7 +83,11 @@ footer p {
     font-size: 1.5em
 }
 
-@media only screen and (max-width: 1024px) {
+
+/*MEDIA QUERIS*/
+
+
+@media only screen and (max-width: 1240px) {
     .small-6 {
         width: 50%;
         text-align: center;
@@ -99,6 +104,9 @@ footer p {
         border-radius: 3px;
         margin-bottom: 1rem;
 
+    }
+    footer{
+        height: 20%;
     }
 }
 
@@ -137,12 +145,9 @@ footer p {
 nav li a {
     font-size: 0.5em;
 }
-    /*nav li {*/
-        /*margin-right: 1px;*/
-        /*float: right;*/
-        /*padding-top: 20px;*/
-    /*}*/
-
+   footer{
+       height: 20%;
+   }
 
 
 }
