card's background pic changed

--- a/css/app.css
+++ b/css/app.css
@@ -209,7 +209,7 @@ h1 {
     text-align: center;
 }
 .img_1 {
-    background-image: url(../img/pad.jpeg);
+    background-image: url(../img/kibera.jpeg);
 }
 
 /**************************************************/
