--- a/css/app.css
+++ b/css/app.css
@@ -145,7 +145,7 @@ nav li .active:hover {
     margin-top: 30px;
     margin-bottom: 30px;
 }
-.card-small .title {
+.card-small .card-header {
     line-height: 1rem;
     font-size: 1rem;
     font-weight: 300;
@@ -179,7 +179,7 @@ nav li .active:hover {
     background-size: 100% 170%;
     background-repeat: no-repeat;
 }
-.card-small .image .title {
+.card-small .image .card-header {
     position: absolute;
     top: 0;
     left: 0;
@@ -208,7 +208,7 @@ nav li .active:hover {
 h1 {
     text-align: center;
 }
-.img_1 {
+.img_22 {
     background-image: url(../img/kibera.jpeg);
 }
 
