--- a/css/app.css
+++ b/css/app.css
@@ -184,8 +184,9 @@ nav li .active:hover {
     top: 0;
     left: 0;
     padding: 1.3rem;
-    color: #fff;
+    color: white;
     font-size: 1.5em;
+    font-weight: bold;
 }
 .card-small .image img {
     border-radius: 2px 2px 0 0;
