changed all the merge conflints on links

--- a/css/app.css
+++ b/css/app.css
@@ -106,7 +106,7 @@ nav li .active:hover {
 .quote .parallax-window {
     min-height: 440px;
     background: transparent;
-    /*background-image: ;*/
+    background-image: ;
 }
 .impact {
     background-color: #E4007D;
