--- a/programs.css
+++ b/programs.css
@@ -76,10 +76,6 @@ footer p {
     }
 }
 
-
-
-
-
 @media only screen and (max-width: 600px) {
     .small-6 {
         width: 100%;
@@ -106,15 +102,52 @@ footer p {
         height: 45px;
         padding-left: 10px;
     }
-
-
-nav li a {
+    nav li a {
     font-size: 0.5em;
-}
-   footer{
-       height: 20%;
+    }
+    footer{
+        height: 20%;
+    }
+   .third{
+       float: left;
+   }
+   .second{
+       float: right;
+       display: none;
    }
 
+
+
+
+
+    .flex-row {
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    }
+
+    /*.flex-row [class*=lind-] {*/
+        /*display: -webkit-flex;*/
+        /*display: -ms-flexbox;*/
+        /*display: flex;*/
+    /*}*/
+
+    /*.flex-row .lind-second,*/
+    /*.flex-row .lind-third {width:50%;}*/
+
+
+    /*.flex-row .limbo {*/
+        /*width: 100%;*/
+        /*something to keep it open and add some inner style */
+    /*}*/
+
+    .flex-row .lind-second {
+        order: 1;
+        width: 100%;
+    }
 
 }
 
