--- a/css/app.css
+++ b/css/app.css
@@ -145,7 +145,7 @@ nav li .active:hover {
     margin-top: 30px;
     margin-bottom: 30px;
 }
-.card-small .title {
+.card-small .card-header {
     line-height: 1rem;
     font-size: 1rem;
     font-weight: 300;
@@ -179,13 +179,15 @@ nav li .active:hover {
     background-size: 100% 170%;
     background-repeat: no-repeat;
 }
-.card-small .image .title {
+.card-small .image .card-header {
     position: absolute;
     top: 0;
     left: 0;
     padding: 1.3rem;
-    color: #fff;
+    color: #ffffff;
     font-size: 1.5em;
+    font-weight: bold;
+    line-height: 20px;
 }
 .card-small .image img {
     border-radius: 2px 2px 0 0;
@@ -198,18 +200,21 @@ nav li .active:hover {
     margin-left: auto;
     margin-right: auto;
 }
-.event_date {
+.card-event-date {
     display: inline-block;
 }
-.event_txt {
-    border-right: 1px solid black;
+.card-event-text {
     width: 100%
 }
 h1 {
     text-align: center;
 }
-.img_1 {
-    background-image: url(../img/pad.jpeg);
+.img_22 {
+    background-image: url(../img/bath1.jpg);
+    /*
+    -webkit-filter: grayscale(50%);
+    -webkit-filter: brightness(70%);
+*/
 }
 
 /**************************************************/
