--- a/programs.css
+++ b/programs.css
@@ -1,10 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway);
+/*@import url(https://fonts.googleapis.com/css?family=Raleway);*/
+
 body {
     background-image: url(img/pattern.png);
 }
 h1 {
     text-align: center;
-    padding-top: 6%;
+    padding-top: 11%;
 }
 .thumbnail {
     height: 270px;
